Sort_Limit
db.courses.find().sort()
{
  _id: ObjectId('6a268c52ac221a225bb14627'),
  name: 'java',
  fees: 25000,
  duration: 420
}
{
  _id: ObjectId('6a268d84ac221a225bb14628'),
  name: 'python',
  fees: 30000,
  duration: 450
}
{
  _id: ObjectId('6a268d84ac221a225bb14629'),
  name: 'c',
  fees: 15000,
  duration: 320
}
{
  _id: ObjectId('6a268d84ac221a225bb1462a'),
  name: 'c++',
  fees: 20000,
  duration: 350
}
{
  _id: ObjectId('6a268e96115d55a20b8b2218'),
  name: 'mongodb',
  fees: 25000,
  duration: 340
}
{
  _id: ObjectId('6a26924eac221a225bb1462c'),
  name: 'react',
  fees: 14000,
  duration: 240,
  completed: true,
  certifiedDate: 2026-06-08T09:58:38.072Z,
  tutor: [
    'suganya',
    'nazi',
    'malathi'
  ],
  relatedCourses: {
    name: 'node.js',
    fees: 22000,
    duration: 370
  }
}
db.courses.find().sort({duration:1})
{
  _id: ObjectId('6a26924eac221a225bb1462c'),
  name: 'react',
  fees: 14000,
  duration: 240,
  completed: true,
  certifiedDate: 2026-06-08T09:58:38.072Z,
  tutor: [
    'suganya',
    'nazi',
    'malathi'
  ],
  relatedCourses: {
    name: 'node.js',
    fees: 22000,
    duration: 370
  }
}
{
  _id: ObjectId('6a268d84ac221a225bb14629'),
  name: 'c',
  fees: 15000,
  duration: 320
}
{
  _id: ObjectId('6a268e96115d55a20b8b2218'),
  name: 'mongodb',
  fees: 25000,
  duration: 340
}
{
  _id: ObjectId('6a268d84ac221a225bb1462a'),
  name: 'c++',
  fees: 20000,
  duration: 350
}
{
  _id: ObjectId('6a268c52ac221a225bb14627'),
  name: 'java',
  fees: 25000,
  duration: 420
}
{
  _id: ObjectId('6a268d84ac221a225bb14628'),
  name: 'python',
  fees: 30000,
  duration: 450
}
db.courses.find().sort({fees}:-1})
SyntaxError: Unexpected token, expected "," (1:29)

> 1 | db.courses.find().sort({fees}:-1})
    |                              ^
db.courses.find().sort({fees:-1})
{
  _id: ObjectId('6a268d84ac221a225bb14628'),
  name: 'python',
  fees: 30000,
  duration: 450
}
{
  _id: ObjectId('6a268c52ac221a225bb14627'),
  name: 'java',
  fees: 25000,
  duration: 420
}
{
  _id: ObjectId('6a268e96115d55a20b8b2218'),
  name: 'mongodb',
  fees: 25000,
  duration: 340
}
{
  _id: ObjectId('6a268d84ac221a225bb1462a'),
  name: 'c++',
  fees: 20000,
  duration: 350
}
{
  _id: ObjectId('6a268d84ac221a225bb14629'),
  name: 'c',
  fees: 15000,
  duration: 320
}
{
  _id: ObjectId('6a26924eac221a225bb1462c'),
  name: 'react',
  fees: 14000,
  duration: 240,
  completed: true,
  certifiedDate: 2026-06-08T09:58:38.072Z,
  tutor: [
    'suganya',
    'nazi',
    'malathi'
  ],
  relatedCourses: {
    name: 'node.js',
    fees: 22000,
    duration: 370
  }
}
db.courses.find({name:true, fees:true}).sort({fees:-1})
db.courses.find({}, {name:true, fees:true}).sort({fees:-1})
{
  _id: ObjectId('6a268d84ac221a225bb14628'),
  name: 'python',
  fees: 30000
}
{
  _id: ObjectId('6a268c52ac221a225bb14627'),
  name: 'java',
  fees: 25000
}
{
  _id: ObjectId('6a268e96115d55a20b8b2218'),
  name: 'mongodb',
  fees: 25000
}
{
  _id: ObjectId('6a268d84ac221a225bb1462a'),
  name: 'c++',
  fees: 20000
}
{
  _id: ObjectId('6a268d84ac221a225bb14629'),
  name: 'c',
  fees: 15000
}
{
  _id: ObjectId('6a26924eac221a225bb1462c'),
  name: 'react',
  fees: 14000
}
db.courses.find({}, {name:true, fees:true}).sort({fees:-1}.limit(2))
TypeError: {(intermediate value)}.limit is not a function
db.courses.find({}, {name:true, fees:true}).sort({fees:-1}).limit(2)
{
  _id: ObjectId('6a268d84ac221a225bb14628'),
  name: 'python',
  fees: 30000
}
{
  _id: ObjectId('6a268c52ac221a225bb14627'),
  name: 'java',
  fees: 25000
}
logic


